# hw1_ml_fastapi

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  run_test.py
Dockerfiles/parser/: Dockerfile
app/: __init__.py  __main__.py
app/api/v1/: lasso.py
app/serializers/: car_model.py
app/services/: celery.py  model_predictors.py  models_getters.py
app/settings/: celery_config.py  logger.py  settings.py
app/tasks/: task.py
research/: HW1_Regression_with_inference.ipynb  dock.md
research/models/LassoGrid/: MLmodel
research/models/Ridge/: MLmodel  model.pkl
research/models/lasso_grid/: MLmodel  conda.yaml  model.pkl
research/models/lasso_grid_scaler/: MLmodel  model.pkl
test/test_e2e/: conftest.py  settings.py  test_lasso.py
